fixed uneven text boxes resulting from different font in the form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ h1 {
     font-weight: bold;
 }
 .row {
-    padding-top: 1%;
+    padding-top: 2%;
 }
 
 .container-fluid {
